# wingspan_gym

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  README.md  hello.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.ci/: check-cargo-toml-version.py
.github/workflows/: docs.yml  lint.yml  release.yml
.scripts/docs/: gen_ref_pages.py
code_gen/: generate_beak_impl.py  generate_bonus_impl.py  generate_card_impl.py  utils.py
contributing/: index.html
data/: .gitignore
docs/examples/: random_players_playing_bird_cards.py
examples/: random_players_playing_bird_cards.py
examples/random_players_playing_bird_cards/: index.html
python/wingspan_gym/: __init__.py  card_handling_utils.py  constants.py  game.py  player_mat.py  player_state.py
python/wingspan_gym/_internal/: __init__.pyi
reference/wingspan_gym/__init__/: index.html
reference/wingspan_gym/_internal/__init__/: index.html
reference/wingspan_gym/game/: index.html
search/: search_index.json
src/: action.rs  bird_card_callback.rs  bird_feeder.rs  deck_and_holder.rs  end_of_round_goal.rs  error.rs  expansion.rs  food.rs  habitat.rs  lib.rs  nest.rs  player.rs  player_mat.rs  resource.rs  step_result.rs  wingspan_env.rs
src/bird_card/: bird_card_action_impl.rs  bird_card_beak_impl.rs  bird_card_constants.rs  bird_card_impl.rs  mod.rs  test_bird_card_action_impl.rs
src/bonus_card/: bonus_card_impl.rs  bonus_card_manual.rs  bonus_scoring.rs  mod.rs
tests/: test_card_handling_utils.py
