[project]
name = "wingspan_gym"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "gymnasium>=1.0.0",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[dependency-groups]
dev = [
    "fastexcel",
    "maturin>=1.8.1",
    "pytest",
    "polars>=1.20",
    "pre-commit>=4.1.0",
    "unidecode>=1.3.8",
]
lint = ["ruff"]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "wingspan_gym._internal"

[tool.pyright]
venvPath = "."
venv = ".venv"
